--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <canvas id="sky-canvas"></canvas>
     <div class="app">
       <header>
         <h1 class="app-title">Counter</h1>
